Updated works and about me

--- a/src/App.css
+++ b/src/App.css
@@ -463,6 +463,11 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   height: 48px;
 }
 
+.footer-hh-logo {
+  width: 47px;
+  height: 48px;
+}
+
 .footer-linkedin-logo {
   width: 47px;
   height: 48px;
